output_final_success_utf8.log
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :app:checkDebugDuplicateClasses UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:mergeExtDexDebug UP-TO-DATE
> Task :app:mergeLibDexDebug UP-TO-DATE
> Task :app:mergeDebugJniLibFolders UP-TO-DATE
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug UP-TO-DATE
> Task :app:writeDebugAppMetadata UP-TO-DATE
> Task :app:writeDebugSigningConfigVersions UP-TO-DATE
> Task :app:kaptGenerateStubsDebugKotlin
> Task :app:kaptDebugKotlin UP-TO-DATE

> Task :app:compileDebugKotlin
w: file:///C:/Users/aritr/AndroidStudioProjects/Chat_Final_App/app/src/main/java/aritra/seal/new_chat/ui/main/MainActivity.kt:123:19 'setOnNavigationItemSelectedListener(BottomNavigationView.OnNavigationItemSelectedListener?): Unit' is deprecated. Deprecated in Java
w: file:///C:/Users/aritr/AndroidStudioProjects/Chat_Final_App/app/src/main/java/aritra/seal/new_chat/ui/splash/Splash_Activity.kt:68:21 Variable 'keyPair' is never used
w: file:///C:/Users/aritr/AndroidStudioProjects/Chat_Final_App/app/src/main/java/aritra/seal/new_chat/ui/story/StoryViewerActivity.kt:64:35 'getSerializableExtra(String!): Serializable?' is deprecated. Deprecated in Java

> Task :app:compileDebugJavaWithJavac
./gradlew : C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\gener
ated\data_binding_base_class_source_out\debug\out\aritra\seal\new_chat\databind
ing\ActivityStoryViewerBinding.java:16: error: package 
aritra.seal.new_chat.Story does not exist
At line:1 char:1
+ ./gradlew assembleDebug > output_final_success.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (C:\Users\aritr\... does not exist 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
import aritra.seal.new_chat.Story.StoriesProgressView;
                                 ^
C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_bi
nding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activity
StoryViewerBinding.java:44: error: cannot find symbol
  public final StoriesProgressView storiesProgress;
               ^
  symbol:   class StoriesProgressView
  location: class ActivityStoryViewerBinding
C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_bi
nding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activity
StoryViewerBinding.java:64: error: cannot find symbol
      @NonNull ImageView profileImageView, @NonNull StoriesProgressView 
storiesProgress,
                                                    ^
  symbol:   class StoriesProgressView
  location: class ActivityStoryViewerBinding
C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_bi
nding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activity
StoryViewerBinding.java:147: error: cannot find symbol
      StoriesProgressView storiesProgress = 
ViewBindings.findChildViewById(rootView, id);
      ^
  symbol:   class StoriesProgressView
  location: class ActivityStoryViewerBinding
4 errors

> Task :app:compileDebugJavaWithJavac FAILED
[Incubating] Problems report is available at: file:///C:/Users/aritr/AndroidStudioProjects/Chat_Final_App/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_
binding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activi
tyStoryViewerBinding.java:16: error: package aritra.seal.new_chat.Story does 
not exist
  import aritra.seal.new_chat.Story.StoriesProgressView;
                                   ^
  C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_
binding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activi
tyStoryViewerBinding.java:44: error: cannot find symbol
    public final StoriesProgressView storiesProgress;
                 ^
    symbol:   class StoriesProgressView
    location: class ActivityStoryViewerBinding
  C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_
binding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activi
tyStoryViewerBinding.java:64: error: cannot find symbol
        @NonNull ImageView profileImageView, @NonNull StoriesProgressView 
storiesProgress,
                                                      ^
    symbol:   class StoriesProgressView
    location: class ActivityStoryViewerBinding
  C:\Users\aritr\AndroidStudioProjects\Chat_Final_App\app\build\generated\data_
binding_base_class_source_out\debug\out\aritra\seal\new_chat\databinding\Activi
tyStoryViewerBinding.java:147: error: cannot find symbol
        StoriesProgressView storiesProgress = 
ViewBindings.findChildViewById(rootView, id);
        ^
    symbol:   class StoriesProgressView
    location: class ActivityStoryViewerBinding
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.11.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 32s
32 actionable tasks: 3 executed, 29 up-to-date
